--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
   },
   "dependencies": {
     "next": "9.4.0",
+    "randomstring": "^1.1.5",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "styled-components": "^5.1.0"
   },
   "devDependencies": {
     "@types/node": "^13.13.5",
+    "@types/randomstring": "^1.1.6",
     "@types/react": "^16.9.34",
     "@types/styled-components": "^5.1.0",
     "typescript": "^3.8.3"
