--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "randomstring": "^1.1.5",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "styled-components": "^5.1.0"
+    "redis": "^3.0.2",
+    "styled-components": "^5.1.0",
+    "url": "^0.11.0"
   },
   "devDependencies": {
     "@types/node": "^13.13.5",
     "@types/randomstring": "^1.1.6",
     "@types/react": "^16.9.34",
+    "@types/redis": "^2.8.21",
     "@types/styled-components": "^5.1.0",
     "typescript": "^3.8.3"
   }
