--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "build": "next build"
   },
   "dependencies": {
+    "moment": "^2.25.3",
     "next": "9.4.0",
     "randomstring": "^1.1.5",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "redis": "^3.0.2",
     "styled-components": "^5.1.0",
+    "swr": "^0.2.0",
     "url": "^0.11.0"
   },
   "devDependencies": {
