--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "randomstring": "^1.1.5",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-textarea-autosize": "^7.1.2",
     "redis": "^3.0.2",
     "styled-components": "^5.1.0",
     "swr": "^0.2.0",
@@ -21,8 +22,12 @@
     "@types/node": "^13.13.5",
     "@types/randomstring": "^1.1.6",
     "@types/react": "^16.9.34",
+    "@types/react-textarea-autosize": "^4.3.5",
     "@types/redis": "^2.8.21",
     "@types/styled-components": "^5.1.0",
+    "babel-plugin-import": "^1.13.0",
+    "babel-plugin-inline-react-svg": "^1.1.1",
+    "babel-plugin-lodash": "^3.3.4",
     "typescript": "^3.8.3"
   }
 }
